# tethys

./: .editorconfig  .gitignore  01-agent-rules.md  02-workspace-rules.md  AGENT-BOOTSTRAP.md  AGENT-QUICKSTART.md  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DEVELOPMENT-PLAN.md  DEVELOPMENT-STATUS.md  IMPROVE_TEST_COVERAGE.md  ISSUE-CREATION-SUMMARY.md  KIROGRAPH-COMPARISON.md  LICENSE-APACHE  LICENSE-MIT  MCP-USAGE-GUIDE.md  PR-WORKFLOW.md  PRD.md  PROGRESS.md  PROGRESS_FINAL.md  PROJECT_COMPARISON.md  README.md  SESSION_NOTES.md  SOURCE_GENERATOR.md  Stratify.sln  TEST_IMPLEMENTATION_PLAN.md  TEST_STRATEGY.md  TUnit_NOTES.md  TestingSourceGenerators.md  Tethys.sln  bootstrap_your_project_for_ai.md  deny.toml
.csharp-ns/: acceptance.md  design.md  expectations.md  fixtures.sh  plan.md  probe-findings.md  probe.sh  raw-request.md  related-issues.md  spec.md
.idxperf/: .gitignore  acceptance.md  baseline-selfindex.json  design.md  final-selfindex.json  plan.md  probe-dump.py  probe-findings.md  prototype.patch  raw-request.md  related-issues.md  spec.md
.rivets/: config.yaml  issues.jsonl
.separator-fix/: acceptance.md  design.md  dump.sh  fixtures.sh  plan.md  probe-findings.md  probe.sh  raw-request.md  related-issues.md  review-decisions.md  spec.md
.tethys-1dcc/: design.md  findings.md  nextest-baseline.txt  nextest-final.txt  plan.md  probe-loops-output.txt  probe-output.txt  probe.py  probe_loops.py  related-issues.md
.tethys-2mjj/: design.md  findings.md  plan.md  probe-edge.py  probe-noadvert.py  probe.py  related-issues.md  review-decisions.md  slice1-red.txt  slice4-green.txt  to-file.md
.tethys-3i35/: audit.md  design.md  findings.md  monotonicity.diff  oracle.py  plan.md  postfix-resolved-refs.tsv  prefix-resolved-refs.tsv  probe.py  related-issues.md  review-decisions.md
.tethys-53iv/: audit.md  baseline-csharp-all-refs.txt  baseline-self-call-edges.txt  baseline-self-call-refs.txt  baseline-self-noncall-refs.txt  design.md  findings.md  plan.md  probe1-output.txt  probe1.sh  probe2-output.txt  probe3-output.txt  probe3.sh  related-issues.md
.tethys-53iv/probe2/: Cargo.toml
.tethys-53iv/probe2/src/: main.rs
.tethys-6rlu/: design.md  oracle.sh  plan.md  probe.py  prove-it.md  related-issues.md
.tethys-8ym0/: audit-with-panic-points.txt  audit-with-unused-imports.txt  audit-with-visibility-tightening.txt  audit-without-callers.txt  audit.md  base-panic.txt  base-vis.txt  design.md  falsifier1.py  findings.md  plan.md  post-dep.txt  probe.py  probe2.py  related-issues.md  survivors.tsv
.tethys-9z7i/: design-slice2.md  design-slice3.md  findings.md  perf-slice2.md  plan-slice2.md  plan-slice3.md  probe1.sh  related-issues.md
.tethys-aay4/: audit.md  design.md  dl7l-record.jsonl  findings.md  plan.md  probe.py  related-issues.md
.tethys-dvsw/: audit.md  design.md  findings.md  plan.md  probe-out-head.txt  probe.py  probe2_textual.py  probe3-out.txt  probe3-summary.txt  probe3.py  related-issues.md
.tethys-epmj/: design.md  findings.md  oracle-expectations.md  plan.md  probe-baseline.txt  probe.sh  related-issues.md
.tethys-haw5/: baseline-rand-deprecated.json  design.md  findings.md  plan.md  probe1.sh  probe2.sh  probe3.sh  regression-run.md  related-issues.md
.tethys-j2r1/: audit.md  design.md  findings.md  plan.md  probe.py  related-issues.md  to-file.md
.tethys-jdly/: audit.md  design.md  findings.md  oracle-q1.sh  plan.md  probe.sh  related-issues.md
.tethys-s8hv/: design.md  findings.md  plan.md  probe.sh  related-issues.md
.tethys-v1w8/: design.md  plan.md  probe-findings.md  probe.py  related-issues.md
.tethys-xebx/: audit.md  baseline-call-construct-refs.txt  baseline-call-edges.txt  baseline-refs-in-symbol.txt  design.md  falsifier-c9.sh  findings.md  plan.md  probe1-output.txt  probe2-output.txt  probe2.sh  related-issues.md  synthetic-members.cs
.tethys-xebx/probe1/: Cargo.toml
.tethys-xebx/probe1/src/: main.rs
.tethys-xoxq/: definite-audit.md  design.md  findings.md  oracle1.sh  plan.md  probe1.sh  probe2.sh  probe3.sh  related-issues.md  self-index-review.md
.tethys-y3bx/: audit.md  design.md  findings.md  plan.md  probe.py  related-issues.md
.tethys-ygjx/: design.md  findings.md  fn_names.txt  free_or_method_fn_names.txt  names_function.txt  names_method.txt  plan.md  probe.py  related-issues.md
.usgf/: acceptance.md  design.md  plan.md  probe-findings.md  probe.sh  raw-request.md  related-issues.md  review-decisions.md  spec.md
Tethys.Data/: TethysContext.cs
benches/: common.rs  indexing.rs  queries.rs
(+440 files in other folders)
