[package]
name = "tethys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Code intelligence cache and query interface"
repository = "https://github.com/dwalleck/rivets"
keywords = ["code-intelligence", "static-analysis", "tree-sitter", "cli"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"

# Parallelism
rayon = "1.10"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Graph algorithms
petgraph.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# LSP integration
lsp-types = "0.97"
percent-encoding = "2.3"

# CLI (for binary)
clap.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "queries"
harness = false

[lints]
workspace = true
