[package]
name = "tethys"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
authors = ["Rivets Contributors"]
description = "Code intelligence cache and query interface"
repository = "https://github.com/dwalleck/rivets"
keywords = ["code-intelligence", "static-analysis", "tree-sitter", "cli"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"

# Parallelism
rayon = "1.10"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# LSP integration
lsp-types = "0.97"
percent-encoding = "2.3"

# Cargo manifest parsing
cargo_toml = "0.22"

# CLI (for binary)
clap = { version = "4.5", features = ["derive", "cargo"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
colored = "3"

[dev-dependencies]
tempfile = "3.18"
rstest = "0.26"
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-test = "0.2"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "queries"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.test]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"
